@@ -1,6 +1,6 @@
 Package: xcms
 Version: 3.3.3
-Date: 2018-09-14
+Date: 2018-09-18
 Title: LC/MS and GC/MS Data Analysis
 Author: Colin A. Smith <csmith@scripps.edu>,
     Ralf Tautenhahn <rtautenh@gmail.com>,
